--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@
 	margin-top:5px;
 	font-size:27px
 }
- button.open-modal {
+ button.caqv-open-modal {
     position: relative;
     border: 1px solid #ddd;
     padding: 8px 17px;
