dismis btn hide from anyywhere type notice

--- a/framework/ca-framework/assets/css/ca-notification.css
+++ b/framework/ca-framework/assets/css/ca-notification.css
@@ -147,6 +147,9 @@ p.ca-require-plugin-msg strong, p.ca-require-plugin-msg b, p.ca-require-plugin-m
     justify-content: left;
     gap: 10px;
 }
+.ca-reuire-plugin-notice.anwwhere-notice button.ca-notice-dismiss {
+    display: none;
+}
 .ca-reuire-plugin-notice.anwwhere-notice {
     border: 1px solid #03495a29;
     margin: 5px 0;
