some setting fixed

--- a/assets/css/modal-box.css
+++ b/assets/css/modal-box.css
@@ -1,5 +1,6 @@
 .bg-wg-modal {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba( 0, 0, 0, 0.7);
+    /* background-color: rgb(255 255 255 / 88%); */
     width: 100%;
     position: fixed;
     top: 0;
@@ -14,7 +15,7 @@
     width: 65%;
     position: relative;
 
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 10px 30px 0 rgba(0,0,0,0.4);/* ,0 10px 30px 0 rgba(0,0,0,0.7) */
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
