--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,7 @@
     text-align: center;
     position: absolute;
     color: #fff;
+    z-index: 999;
 }
 .cawqv-open .qv-description .quantity {
   position: relative;
@@ -224,10 +225,13 @@ div#cawqv-modal .qv-description form.cart>* {
     /*! animation-name: zoomInUp; */
     animation-duration: 0.4s;
 }
-.cawqv-open .wg-modal .wg-modal-close {
-    right: 15px;
-    top: 10px;
-    z-index: 999;
+
+.remodal-modal-close {
+  position: absolute;
+  top: 6px;
+  right: 11px;
+  z-index: 999;
+  cursor: pointer;
 }
 .cawqv-open .qv-thumbnail>span{
 	display:block;
@@ -380,17 +384,14 @@ div#cawqv-modal .qv-description form.cart>* {
 }
 
 
-/* Extra CSS Code :: Test Actually  */
-div#cawqv-modal {
-  position: fixed;
-  z-index: 999;
-  width: 58%;
-  height: 450px;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  overflow: hidden;
-  display: none;
-  background-color: white;
-  box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.171);
+
+
+div#cawqv-modal.remodal {
+  box-sizing: border-box;
+  width: 100%;
+  margin-bottom: 0;
+  padding: 0;
+  transform: translate3d(0, 0, 0);
+  color: #2b2e38;
+  background: #fff;
 }
