working for modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 	padding-left:0
 }
 /* Clear floats after the columns */
-.cawqv-open .modal_container{
+.cawqv-open .cawqv-modal-container{
 	position:relative
 }
 
